--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -14,6 +14,32 @@
         android:layout_height="wrap_content"
         android:text="Sign Up"
         />
+    <ImageView
+        android:id="@+id/imgsignup"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/ic_launcher_background"
+        />
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_margin="10dp"
+        android:hint="Full Name"
+        android:gravity="center"
+
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edhoTen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/custtomedit"
+            android:paddingLeft="10dp"
+
+
+
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
