--- a/app/src/main/res/layout/activity_add_sv.xml
+++ b/app/src/main/res/layout/activity_add_sv.xml
@@ -20,24 +20,31 @@
         android:gravity="center"
 
         >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add New Student"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_marginBottom="20dp"
-        />
+        <ImageView
+            android:id="@+id/choiImage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/image1"
+            android:layout_margin="20dp"
+            />
+        <LinearLayout
+            android:id="@+id/imageContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="16dp">
+        </LinearLayout>
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_margin="12dp"
+        android:layout_margin="7dp"
         android:gravity="center"
         >
         <EditText
             android:id="@+id/etName"
-            android:layout_margin="12dp"
             android:background="@drawable/custtomedit"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -48,12 +55,11 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_margin="12dp"
+        android:layout_margin="7dp"
         android:gravity="center"
         >
     <EditText
         android:id="@+id/etAge"
-        android:layout_margin="12dp"
         android:background="@drawable/custtomedit"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -66,12 +72,11 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_margin="12dp"
+        android:layout_margin="7dp"
         android:gravity="center"
         >
     <EditText
         android:id="@+id/etMsv"
-        android:layout_margin="12dp"
         android:background="@drawable/custtomedit"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -80,29 +85,14 @@
         android:hint="MSV" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_margin="12dp"
-        android:gravity="center"
-        >
-    <EditText
-        android:id="@+id/etImageUrl"
-        android:layout_margin="12dp"
-        android:background="@drawable/custtomedit"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="15dp"
-        android:drawableEnd="@drawable/image1"
-        android:hint="Image URL" />
-    </com.google.android.material.textfield.TextInputLayout>
+
 
 
     <CheckBox
         android:id="@+id/checkStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="10dp"
         android:text="Status: Chưa Ra Trường" />
 
 
