--- a/app/src/main/res/layout/dialog_sua.xml
+++ b/app/src/main/res/layout/dialog_sua.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="16dp">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,7 +14,23 @@
         android:text="Edit Impor Student"
         android:layout_marginBottom="10dp"
         android:gravity="center"
-        ></TextView>
+        />
+    <ImageView
+        android:id="@+id/choiImageed"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/image1"
+        android:layout_margin="20dp"
+        />
+
+    <LinearLayout
+        android:id="@+id/imageContainered"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="16dp">
+    </LinearLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilName"
@@ -69,23 +86,6 @@
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tilImageUrl"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_margin="12dp"
-        android:gravity="center"
-        android:hint="Image URL">
-
-        <EditText
-            android:id="@+id/etImageUrl"
-            android:layout_margin="7dp"
-            android:background="@drawable/custtomedit"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:inputType="text" />
-    </com.google.android.material.textfield.TextInputLayout>
 
     <CheckBox
         android:id="@+id/checkStatus"
